<resources>
    <string name="app_name">MAD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_contacts_recents">Recents</string>
    <string name="tab_contacts_favorites">Favorites</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_home">Home</string>
    <string name="title_weather">Weather</string>
    <string name="title_chat">CHAT</string>

    <!--Strings for sign in -->
    <string name="editText_sign_in_email">Email</string>
    <string name="editText_sign_in_password">Password</string>
    <string name="button_sign_in_signin">Sign In</string>
    <string name="button_sign_in_register">Register</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="keys_prefs_email">Sharded Prefs Email</string>
    <string name="keys_prefs_memberid">Sharded Prefs MemberID</string>
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="type_email_hint">Enter Email Address</string>
    <string name="type_new_pass_hint">Enter Current Password</string>
    <string name="type_conf_pass_hint">Enter New Password</string>

    <!--String values for register-->
    <string name="email_hint">Email address</string>
    <string name="pw_hint">Password</string>
    <string name="pw_confirm_hint">Confirm Password</string>
    <string name="login_label">Login</string>
    <string name="reg_button_label">Register</string>
    <string name="reg_label">Don\&apos;t have an account?</string>
    <string name="fn_hint">First name</string>
    <string name="ln_hint">Last name</string>
    <string name="username_hint">Username</string>
    <string name="verification_text">Press the button below once you have
                                            validated your email with the link we sent you!</string>
    <!--String values for contact-->
    <string name="delete_contact_dialog">Are you sure you want to delete this entry?</string>

    <string name="delete_popup_menu">Delete</string>
    <string name="favorite_popup_menu">Favorite</string>

    <!--Strings for weather-->
    <string name="textView_weather_current_city">City</string>
    <string name="textView_weather_current_temperature">Temperature</string>
    <string name="textView_weather_current_status">Status</string>
    <string name="item_weather_current_location">Change to current location</string>
    <string name="item_weather_zipcode">Change by Zip code</string>
    <string name="item_weather_map">Change by location</string>

    <string name="base_url">https://mobileapp-group-backend.herokuapp.com/</string>
    <string name="favor_contact_dialog">This is your favorite person?</string>
    <string name="title_activity_weather">WeatherActivity</string>


    <string name="label_location">Confirm location?:</string>
    <string name="title_activity_maps">Map</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="contact_add_text">Who would you like to add to your contacts?</string>
    <string name="cancel_text">Cancel</string>
    <string name="add_text">Add</string>
</resources>