<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInFragment">

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/editText_sign_in_email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editText_sign_in_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/button_sign_in_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Switch
        android:id="@+id/switch_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="38dp"
        android:checked="true"
        android:text="Stay Signed In"
        app:layout_constraintBottom_toTopOf="@+id/button_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        tools:text="@string/switch_sign_in" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_sign_in_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/button_forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="124dp"
        android:text="Forgot Password?"
        android:textColor="@color/color_primary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>