<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.group1app.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.group1app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.group1app.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" >
        <argument
            android:name="chatid"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_weather_to_locationFragment"
            app:destination="@id/locationFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.group1app.ui.chat.ChatListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_list">
        <action
            android:id="@+id/action_navigation_chat_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/contactListFragment"
        android:name="edu.uw.group1app.ui.contacts.all.ContactListFragment"
        android:label="ContactListFragment" >
        <action
            android:id="@+id/action_contactListFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <argument
            android:name="chatid"
            app:argType="integer" />
        <argument
            android:name="throughChat"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="edu.uw.group1app.ui.chat.ChatFragment"
        android:label="CHAT"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="chatid"
            app:argType="integer" />
        <argument
            android:name="chattitle"
            app:argType="string" />
        <action
            android:id="@+id/action_chatFragment_to_contactListFragment"
            app:destination="@id/contactListFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_password_chage"
        android:name="edu.uw.group1app.ui.password.PasswordChangingFragment"
        android:label="fragment_password_finding"
        tools:layout="@layout/fragment_password_changing" >
        <action
            android:id="@+id/action_navigation_password_chage_to_navigation_user_setting"
            app:destination="@id/navigation_user_setting" />
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user_setting"
        android:name="edu.uw.group1app.ui.userSetting.UserSettingFragment"
        android:label="fragment_user_setting"
        tools:layout="@layout/fragment_user_setting" >
        <action
            android:id="@+id/action_navigation_user_setting_to_navigation_password_chage"
            app:destination="@id/navigation_password_chage" />
    </fragment>
    <fragment
        android:id="@+id/locationFragment"
        android:name="edu.uw.group1app.ui.weather.LocationFragment"
        android:label="LocationFragment" />
</navigation>