<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.password.PasswordChangingFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="271dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="132dp"
        android:text="Change Your Password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_change_email"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/type_email_hint"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/text_change_new_pass"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/type_new_pass_hint"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_email" />


    <EditText
        android:id="@+id/text_chage_confirm_pass"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/type_conf_pass_hint"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_new_pass" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:text="CANCEL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_chage_confirm_pass" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="60dp"
        android:text="SEND"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/text_chage_confirm_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>